# rustpascal

./: README.md
compiler/libpascalc_hashing/: Cargo.toml
compiler/libpascalc_hashing/src/: lib.rs
compiler/libpascalc_lexer/: Cargo.toml
compiler/libpascalc_lexer/src/: cursor.rs  ext.rs  lib.rs  tests.rs
compiler/libpascalc_lexer/src/lexeme/: mod.rs  type.rs
compiler/libpascalc_span/: Cargo.toml
compiler/libpascalc_span/src/: lib.rs  position.rs  span_encoding.rs
compiler/tests/lexer/: lexer_comment_test.pas  lexer_helloworld_test.pas  lexer_integers_test.pas
