[package]
name = "libpascalc_hashing"
authors = ["HTGAzureX1212"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2018"
description = """
Custom hash algorithm implemented for the RustPascal compiler.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
